# HecticDo

./: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tailwind.config.js  vite.config.tauri.ts  vite.config.ts
.github/workflows/: createReleaseBuilds.yml  testApp.yml
src/: App.tsx  Home.tsx  markdwonEditor.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
