[package]
name = "HecticDo"
version = "0.0.1"
description = "A Tauri App"
authors = ["Sam Kennedy-Hine"]
license = ""
repository = "https://github.com/Samdoescode/HecticDo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "window-create", "window-set-size", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
markdown = "1.0.0-alpha.14"
html = "0.6.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
